--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <footer class="fott">
    <div><h4>2021</h4></div>
-   <div> <h4>RS Scoll</h4></div>
+   <div> <h4>RS Scholl</h4></div>
    <div> <h4>my first page</h4></div>
     </footer>
   </body>
