fix edit footer 82 line

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
     <footer class="fott">
    <div><h4>2021</h4></div>
-   <div> <h4>RS-Scholl</h4></div>
+   <div> <h4>RS-Schooll</h4></div>
    <div> <h4>my first page</h4></div>
     </footer>
   </body>
