feat: add animation

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   </section>
   <section class="header_name">
     <div class="Headelast_name">
-      <h1>Koval Pavel</h1>
-         <p class="pshad">front end developer</p>
+      <h1><span>K</span><span>O</span><span>V</span><span>A</span><span>L</span><span>  </span> <span>P</span><span>A</span><span>V</span><span>E</span><span>L</span><span> </span></h1>
+   
     </div>
     
 
