fix : edit page for walidator

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <header class="header_cv">
   <section class="header_image">
-    <div class="myImage"><h2> </h2><img  class="mYi" src= "image/myFotto.jpg" alt="Мое Фото"  ></div>
+    <div class="myImage"><img  class="mYi" src= "image/myFotto.jpg" alt="Мое Фото"  ></div>
   </section>
   <section class="header_name">
     
@@ -68,7 +68,6 @@
     study think that  will master level A2 in a year.
     but I'm friends with Google)</p>
 </div>
-</div>
 <div ></div>
 
 </section>
@@ -81,7 +80,7 @@
 
     <footer class="fott">
    <div><h4>2021</h4></div>
-   <div>  <a href="https://rs.school/js/"><img  src= "image/rs_schoo.jpg" alt="rs.school"  height="30px" width="100px" ></a></div>
+   <div>  <a href="https://rs.school/js/"><img  src= "image/rs_schoo.jpg" alt="rs.school"  height="40" width="100" ></a></div>
    <div> <h4><a  href= https://github.com/an32 >an32</a></h4></div>
     </footer>
   </body>
