fix : validator update

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <body>
     <header class="header_cv">
   <section class="header_image">
-    <div class="myImage"><img  class="mYi" src= "image/myFotto.jpg" alt="Мое Фото"  ></div>
+    <div class="myImage"><img  class="mYi" src= "image/myFotto.jpg" alt="Мое Фото"  >
+      <h2 class="hiden_h2">image myfoto </h2></div>
   </section>
   <section class="header_name">
     
